# categorical-agents

./: AGENT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
examples/: tutorial.rs
src/: capability.rs  category.rs  composition.rs  functor.rs  lib.rs  protocol.rs
